# cc-status

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  可行性分析.md  需求文档.md
.cargo/: config.toml
hooks/: README.md  settings.example.json
src/: app.rs  autostart.rs  config.rs  hook.rs  main.rs  panel.rs  render.rs  server.rs  settings.rs  state.rs  status.rs  tip.rs  tray.rs  win.rs  window.rs
